[metadata]
name = IssuerGHAction
version = 0.0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/issuer
description = A GitHub Action automating self-management of issues by their creators.
long_description = file: ReadMe.md
keywords = open source, ideas
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Text Processing

[options]
python_requires = >=3.4
zip_safe = True
include_package_data = True
packages = IssuerGHAction
setup_requires = setuptools>=44; wheel
install_requires =
	miniGHAPI @ https://github.com/KOLANICH/miniGHAPI.py

	commonmark @ git+https://github.com/readthedocs/commonmark.py
	recommonmark @ git+https://github.com/readthedocs/recommonmark.git
	docutils
	python-dateutil @ git+https://github.com/dateutil/dateutil.git
	#ruamel.yaml @ hg+https://hg.code.sf.net/p/ruamel-yaml/code/
	ruamel.yaml


[options.extras_require]
warnings = python-crontab @ https://gitlab.com/doctormo/python-crontab.git


[options.entry_points]
console_scripts = IssuerGHAction = IssuerGHAction.__main__:main


[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
